Updated portfolio layout, fixed images, and footer adjustments

--- a/Portfolio-Project/index.html
+++ b/Portfolio-Project/index.html
@@ -56,7 +56,7 @@
         <section id="about">
             <h2>About Me</h2>
             <p>Bridging the gap between mechanical and software engineering, I specialize in aerospace manufacturing, spacecraft integration, and full-stack development. At Northrop Grumman, I contributed to mission-critical spacecraft assembly, ensuring precision and efficiency in hardware integration.</p>
-            <p>My expertise spans Python, JavaScript, C++, Swift, React, Firebase, and SQL, enabling me to build full-stack applications, web solutions, and mobile apps. I also apply Fusion 360 and Prusa 3D modeling to design and prototype mechanical components for engineering applications.</p>
+            <p>My experience spans Python, JavaScript, C++, Swift, React, Firebase, and SQL, enabling me to build full-stack applications, web solutions, and mobile apps. I also apply Fusion 360 and Prusa 3D modeling to design and prototype mechanical components for engineering applications.</p>
             <p>Beyond engineering, I have been involved in leadership and veteran advocacy. While at Saddleback College, I served as President of the Society of American Military Engineers (SAME) student chapter and Director of Veterans Affairs, leading initiatives to help veterans transition into STEM careers by connecting them with resources, mentorship, and industry opportunities. My contributions have been recognized with Congressional and Senatorial commendations for leadership and service.</p>
     </section>
       <!-- Awards & Recognition Section -->
@@ -89,7 +89,7 @@
           <!-- James Webb Space Telescope -->
             <article class="project-entry">
               <a href="https://www.northropgrumman.com" target="_blank" rel="noopener noreferrer">
-                <img src="webb.png" alt="James Webb Space Telescope Logo" class="project-logo">
+                <img src="webb1.png" alt="James Webb Space Telescope Logo" class="project-logo">
               </a>
               <div class="project-info">
                 <h3>James Webb Space Telescope - Northrop Grumman</h3>
@@ -111,7 +111,7 @@
       <!-- Aurora-->
         <article class="project-entry">
           <a href="https://github.com/SoulNight/Aurora-Swift" target="_blank" rel="noopener noreferrer">
-            <img src="github-logo.png" alt="GitHub Logo" class="project-logo">
+            <img src="Aurora.png" alt="GitHub Logo" class="project-logo">
           </a>
           <div class="project-info">
             <h3>Aurora - IOS Accesibility App</h3>
@@ -204,7 +204,7 @@
           })();
       </script>
         <footer>
-          <p>Copyright © Tony Bautista 2024</p>
+          <p>Copyright © Tony Bautista 2024 | Designed & Built by Tony Bautista</p>
         </footer>
   </body>
 </html>
