Update Anduril experience and refine About section

--- a/Portfolio-Project/index.html
+++ b/Portfolio-Project/index.html
@@ -54,11 +54,12 @@
     <main>
       <!-- About Section -->
         <section id="about">
-            <h2>About Me</h2>
-            <p>Bridging the gap between mechanical and software engineering, I specialize in aerospace manufacturing, spacecraft integration, and full-stack development. At Northrop Grumman, I contributed to mission-critical spacecraft assembly, ensuring precision and efficiency in hardware integration.</p>
-            <p>My experience spans Python, JavaScript, C++, Swift, React, Firebase, and SQL, enabling me to build full-stack applications, web solutions, and mobile apps. I also apply Fusion 360 and Prusa 3D modeling to design and prototype mechanical components for engineering applications.</p>
-            <p>Beyond engineering, I have been involved in leadership and veteran advocacy. While at Saddleback College, I served as President of the Society of American Military Engineers (SAME) student chapter and Director of Veterans Affairs, leading initiatives to help veterans transition into STEM careers by connecting them with resources, mentorship, and industry opportunities. My contributions have been recognized with Congressional and Senatorial commendations for leadership and service.</p>
-    </section>
+          <h2>About Me</h2>
+              <p>I work at the intersection of mechanical systems and software, building and testing real-world hardware that has to perform under pressure. My background spans aerospace integration, autonomous systems production, and hands-on troubleshooting of complex electrical and RF systems.</p>
+              <p>At Anduril, I execute Acceptance Test Procedures and support end-to-end system validation on autonomous platforms. Prior to that, I supported spacecraft integration at Northrop Grumman on the James Webb Space Telescope, where precision, discipline, and cross-functional teamwork were critical to flight readiness.</p>
+              <p>Earlier in my career, I contributed to software systems testing at NASA’s Jet Propulsion Laboratory for the Mars 2020 mission and have built full-stack applications using Python, JavaScript, C++, Swift, and SQL. Whether it’s hardware or code, I focus on understanding the system as a whole and making it work reliably.</p>
+              <p>I’m also a Navy veteran and former student leader, having served as President of the Society of American Military Engineers (SAME) student chapter and Director of Veterans Affairs at Saddleback College.</p>
+        </section>
       <!-- Awards & Recognition Section -->
       <section id="awards">
         <h2>Awards & Recognition</h2>
@@ -133,30 +134,36 @@
       <!-- Experience Section -->
         <section id="experience">
             <h2>Professional Experience</h2>
+            <!-- Anduril Experience -->
+            <article>
+                <h3>Anduril Industries - Production Technician - Costa Mesa, CA</h3>
+                <ul>
+                  <li>Execute full Acceptance Test Procedures (ATP) on autonomous systems, validating avionics, sensors, communications, and safety systems while diagnosing complex electrical, firmware, and RF issues using schematics and test equipment.</li>
+                  <li>Serve as a technical escalation point for mechanical and test engineers by taking redlined vehicles, performing deep-dive fault isolation, and recommending corrective actions and component replacement.</li>
+                  <li>Support autonomous systems test-range operations, executing pre-flight validation, static fire and flight test support, live issue resolution, and post-test system verification.</li>
+                  <li>Perform final delivery preparation, including weight and balance verification, secure configuration, packaging, and shipment to customers.</li>
+                  <li>Train and upskill technicians on ATP execution, integration workflows, and troubleshooting to enable consistent single-shift vehicle delivery.</li>
+                </ul>
+            </article>
             <!-- Northrop Grumman Experience -->
             <article>
                 <h3>Space Systems - Mechanical Technician - Northrop Grumman, Redondo Beach, CA</h3>
                 <ul>
-                  <li>Supported system-level integration of spacecraft hardware, working with antennas, RF components, and structural assemblies.</li>
-                  <li>Performed hands-on mechanical assembly, installation, and alignment of aerospace hardware, ensuring compliance with engineering tolerances.</li>
-                  <li>Assisted in the integration of composite and metallic structures, working with torque fastening, structural bonding, and match drilling.</li>
-                  <li>Utilized laser alignment and metrology tools to validate mechanical fit and positioning of flight hardware.</li>
-                  <li>Collaborated with engineers from multiple disciplines (mechanical, electrical, software) to troubleshoot and refine integration processes.</li>
-                  <li>Developed and used custom tooling and fixtures to support efficient assembly and integration of mission-critical components.</li>
-                  <li>Conducted validation testing on mechanical assemblies, contributing to environmental and vibration testing for flight readiness.</li>
-                  <li>Applied CAD models and engineering schematics to assist in mechanical integration and interface alignment.</li>
-                  <li>Contributed to the manufacturing, integration, and final assembly of high-profile aerospace missions, including the James Webb Space Telescope (JWST).</li>
+                  <li>Supported system-level integration of spacecraft hardware for the James Webb Space Telescope (JWST), working with antennas, RF components, and primary structural assemblies.</li>
+                  <li>Performed precision mechanical assembly, installation, and alignment using laser alignment and metrology tools to meet strict aerospace tolerances.</li>
+                  <li>Integrated composite and metallic flight structures utilizing torque fastening, structural bonding, and match drilling in accordance with engineering schematics.</li>
+                  <li>Developed and implemented custom tooling and fixtures to improve efficiency and repeatability of mission-critical integration processes.</li>
+                  <li>Conducted validation and configuration testing on mechanical assemblies, contributing to environmental and vibration test readiness for flight hardware.</li>
                 </ul>
             </article>
             <!-- JPL/NASA Internship -->
             <article>
-                <h3>Testing Support - Mars Perseverance Rover 2020- JPL/NASA, La Canada Flintridge, CA</h3>
+                <h3>NASA Jet Propulsion Laboratory (JPL) - Software Systems Support - La Cañada Flintridge, CA</h3>
                 <ul>
-                    <li>Supported the Activity Planning and Sequencing Subsystem Team, ensuring testing processes aligned with mission goals.</li>
-                    <li>Leveraged advanced tools for software integration and testing, enhancing the project's reliability and performance metrics.</li>
-                    <li>Developed Python scripts for data parsing, ensuring data integrity and system efficiency.</li>
-                    <li>Generated comprehensive reports from test data to provide actionable insights for software improvement.</li>
-                    <li>Designed strategic test plans and procedures, establishing a solid foundation for system reliability and quality assurance.</li>
+                  <li>Developed Python scripts to parse, validate, and refine Command Surface Packages, ensuring data integrity and error-free flight software configurations.</li>
+                  <li>Designed and executed software test plans and procedures to support system reliability and mission readiness for the Mars 2020 Perseverance Rover.</li>
+                  <li>Analyzed subsystem test data and generated structured reports to identify defects and drive continuous software improvements.</li>
+                  <li>Performed software integration and automated testing using Sequencer, Robot Framework, and Selenium, contributing to verification of flight and mission planning software.</li>
                 </ul>
             </article>
             <!-- Neudesic Internship -->
@@ -165,7 +172,7 @@
                 <ul>
                   <li>Worked with a remote and local group of interns to plan, create, test, and deploy a full-stack call monitoring software for Callgistics.com</li>
                   <li>Software used: Bootstrap, Angular 4, HTML 5, JavaScript, CSS, Flask, Python, SQL Alchemy, Kubernetes, Google Cloud SQL, and Google Cloud Platform.</li>
-                  </ul>
+                </ul>
             </article>
             <!-- Apple Inc Experience -->
             <article>
@@ -177,12 +184,13 @@
                 </ul>
             </article>
             <!-- Saddleback/IVC Community College Experience -->
-            <article>
-                <h3>IT Project Specialist - Saddleback/IVC Community College, Mission Viejo, CA</h3>
+           <article>
+                <h3>Saddleback / IVC Community College - IT Project Specialist - Mission Viejo, CA</h3>
                 <ul>
-                  <li>Managed and oversaw the implementation of SmartSchedule 3.0 system at Saddleback/IVC Community College, enabling students to plan their academic course schedule quickly and efficiently.</li>
-                  <li>Worked closely with stakeholders and end-users to ensure the system met their needs and requirements, achieving a 91% satisfaction rating.</li>
-                  <li>Streamlined class scheduling process and provided a user-friendly interface for students, reducing the need for direct support.</li>
+                  <li>Led integration of the SmartSchedule 3.0 system, improving academic scheduling workflows and contributing to a 91% user satisfaction rating through stakeholder and end-user collaboration.</li>
+                  <li>Served as Director of Veterans Affairs and Officer of Finance for the Associated Student Government (ASG), representing over 1,500 student veterans, service members, and families.</li>
+                  <li>Advocated for veteran education benefits at the California State Capitol and in Washington, D.C., engaging with legislative offices and institutional leadership.</li>
+                  <li>President, Society of American Military Engineers (SAME) Student Chapter — led initiatives connecting students with industry professionals and promoting STEM career pathways for veterans.</li>
                 </ul>
             </article>
           </section>    
